--- a/index.html
+++ b/index.html
@@ -40,9 +40,7 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat. Donec
-                        eu vehicula neque. Donec viverra lorem nunc, tempus euismod eros sollicitudin ut. Quisque et tincidunt libero. Donec id pharetra justo. Proin euismod lacinia dolor, eu scelerisque justo tempus pharetra. Vivamus nunc justo, finibus
-                        ut nisl sed, euismod rhoncus nulla. Proin sed magna egestas, egestas ante et, congue eros. In consequat, mauris dapibus tincidunt suscipit, ex libero aliquet diam, at maximus risus enim non leo.
+                        I'm here to do good and great things in the world. Currently building the world's best electric aircraft.
                     </p>
                 </div>
             </div>
@@ -51,29 +49,25 @@
     <!-- End #about -->
 
     <div id="experience" class="background-alt">
-        <h2 class="heading">Experience</h2>
+        <h2 class="heading">Employment</h2>
         <div id="experience-timeline">
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
+
+            <div data-date="January 2013 – August 2017">
+                <h3>SpaceX</h3>
+                <h4>Software Engineer</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                  Developed software used to control and monitor the operation of all SpaceX vehicles.
+                </p>
+                <p>
+                  Supported launch, mission, and test operations as a software mission control operator.
                 </p>
             </div>
 
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
+            <div data-date="August 2017 – Present">
+                <h3>Impossible Aerospace</h3>
+                <h4>Head of Engineering; Founding Engineer</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-                </p>
-            </div>
-
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                    Building the world's best fully electric aircraft.
                 </p>
             </div>
         </div>
@@ -90,11 +84,11 @@
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Project Name Here</h3>
+                        <h3>8051 Mp3 Player</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                            Created mp3 player on a breadboard. Implemented a timer based state machine for an 8051 microcontroller to accept user song selection, read mp3 files using SPI interface from SD card, operate mp3 hardware decoder using I2C protocol, and display song information on LCD.
                         </p>
-                        <a href="#">View Project</a>
+                        <a href="https://github.com/keenanjohnson/Embedded-Systems-8051-MP3-Player">Github</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -106,11 +100,11 @@
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Project Name Here</h3>
+                        <h3>Music Genre Classification Using a Neural Network</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                            Designed and implemented a Neural Network to automatically classify audio input as one of ten genres. Achieved 74.68% classification accuracy, rivaling a human study accuracy of 70%.
                         </p>
-                        <a href="#">View Project</a>
+                        <a href="http://keenanjohnson.github.io/projects/docs/Keenan_Johnson_CI_Project_Paper.pdf">Project Report</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -122,8 +116,11 @@
 
     <div id="contact">
         <h2>Get in Touch</h2>
+        <p>
+          Send me an email via the form below or find me on the social medias.
+        </p>
         <div id="contact-form">
-            <form method="POST" action="https://formspree.io/email@email.com">
+            <form method="POST" action="https://formspree.io/keenan.johnson@gmail.com">
                 <input type="hidden" name="_subject" value="Contact request from personal website" />
                 <input type="email" name="_replyto" placeholder="Your email" required>
                 <textarea name="message" placeholder="Your message" required></textarea>
