--- a/index.html
+++ b/index.html
@@ -49,17 +49,39 @@
     <!-- End #about -->
 
     <div id="experience" class="background-alt">
-        <h2 class="heading">Employment</h2>
+        <h2 class="heading">Career</h2>
         <div id="experience-timeline">
+
+            <div data-date="July 2011 – August 2012">
+                <h3>Miners in Space</h3>
+                <h4>President</h4>
+                <p>
+                  Lead team of 20 in proposing, designing, constructing, and
+                  conducting Micro-gravity research through the NASA through the
+                  Reduced Gravity Flight Opportunities Program.
+                </p>
+            </div>
+
+            <div data-date="July 2011 – August 2012">
+                <h3>Missouri S&T Mars Rover Design Team</h3>
+                <h4>Motherboard Designer and Team Lead</h4>
+                <p>
+                  I designed and manufactured the first revision of the main
+                  control printed circuit board for the Missouri University of
+                  Science & Technology's Mars Rover Design Team.
+                </p>
+            </div>
 
             <div data-date="January 2013 – August 2017">
                 <h3>SpaceX</h3>
                 <h4>Software Engineer</h4>
                 <p>
-                  Developed software used to control and monitor the operation of all SpaceX vehicles.
+                  Developed software used to control and monitor the operation
+                  of all SpaceX vehicles.
                 </p>
                 <p>
-                  Supported launch, mission, and test operations as a software mission control operator.
+                  Supported launch, mission, and test operations as a software
+                  mission control operator.
                 </p>
             </div>
 
