--- a/index.html
+++ b/index.html
@@ -14,7 +14,32 @@
     <link href="css/styles.css" rel="stylesheet">
 </head>
 
-<body>
+  <body>
+    <div id="mobile-menu-open" class="shadow-large">
+      <i class="fa fa-bars" aria-hidden="true"></i>
+  </div>
+  <!-- End #mobile-menu-toggle -->
+  <header>
+      <div id="mobile-menu-close">
+          <span>Close</span> <i class="fa fa-times" aria-hidden="true"></i>
+      </div>
+      <ul id="menu" class="shadow">
+          <li>
+              <a href="#about">About</a>
+          </li>
+          <li>
+              <a href="#experience">Experience</a>
+          </li>
+          <li>
+              <a href="#projects">Projects</a>
+          </li>
+          <li>
+              <a href="#contact">Contact</a>
+          </li>
+      </ul>
+  </header>
+  <!-- End header -->
+
     <div id="lead">
         <div id="lead-content">
             <h1>Keenan Johnson</h1>
@@ -52,7 +77,7 @@
         <h2 class="heading">Career</h2>
         <div id="experience-timeline">
 
-            <div data-date="July 2011 – August 2012">
+            <div data-date="2010 – 2012">
                 <h3>Miners in Space</h3>
                 <h4>President</h4>
                 <p>
@@ -62,7 +87,7 @@
                 </p>
             </div>
 
-            <div data-date="July 2011 – August 2012">
+            <div data-date="2011 – 2012">
                 <h3>Missouri S&T Mars Rover Design Team</h3>
                 <h4>Motherboard Designer and Team Lead</h4>
                 <p>
@@ -72,7 +97,7 @@
                 </p>
             </div>
 
-            <div data-date="January 2013 – August 2017">
+            <div data-date="2013 – 2017">
                 <h3>SpaceX</h3>
                 <h4>Software Engineer</h4>
                 <p>
@@ -85,7 +110,7 @@
                 </p>
             </div>
 
-            <div data-date="August 2017 – Present">
+            <div data-date="2017 – Present">
                 <h3>Impossible Aerospace</h3>
                 <h4>Head of Engineering; Founding Engineer</h4>
                 <p>
@@ -173,6 +198,9 @@
                         </li>
                         <li>
                             <a href="https://twitter.com/keenanjohnson" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                        </li>
+                        <li>
+                            <a href="https://medium.com/@keenanjohnson" target="_blank"><i class="fa fa-medium" aria-hidden="true"></i></a>
                         </li>
                     </ul>
                 </div>
