Updated the miners in space story a bit

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               <a href="#about">About</a>
           </li>
           <li>
-              <a href="#experience">Experience</a>
+              <a href="#experience">Story</a>
           </li>
           <li>
               <a href="#contact">Contact</a>
@@ -86,14 +86,14 @@
     <!-- End #about -->
 
     <div id="experience" class="background-alt">
-        <h2 class="heading">Career</h2>
+        <h2 class="heading">Story</h2>
         <div id="experience-timeline">
-
             <div data-date="2010 – 2012">
                 <h3>Miners in Space</h3>
                 <h4>President</h4>
                 <p>
-                  Lead team of 20 in proposing, designing, constructing, and
+                  I started off my carerr in aerospace by leading a team of 20
+                  in proposing, designing, constructing, and
                   conducting Micro-gravity research through the NASA through the
                   Reduced Gravity Flight Opportunities Program.
                 </p>
