--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 <h3>Miners in Space</h3>
                 <h4>President</h4>
                 <p>
-                  I started off my carerr in aerospace by leading a team of 20
+                  I started off my career in aerospace by leading a team of 20
                   in proposing, designing, constructing, and
                   conducting Micro-gravity research through the NASA through the
                   Reduced Gravity Flight Opportunities Program.
